List projects page

--- a/WebContent/ext/bootstrap/3.2.2/css/additions.css
+++ b/WebContent/ext/bootstrap/3.2.2/css/additions.css
@@ -1,3 +1,28 @@
 .centralize {
 	text-align: center;
 }
+
+/* cellpadding */
+th, td { padding: 5px; }
+
+/* cellspacing */
+table { border-collapse: separate; border-spacing: 5px; } /* cellspacing="5" */
+table { border-collapse: collapse; border-spacing: 0; }   /* cellspacing="0" */
+
+/* valign */
+th, td { vertical-align: top; }
+
+/* align (center) */
+table { margin: 0 auto; }
+
+.td-yellow {
+	background-color: yellow;
+}
+
+.td-green {
+	background-color: green;
+}
+
+.td-red {
+	background-color: red;
+}
